--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Target</title>
-    <link rel="shortcut icon" href="./imgs/icon.png" type="./imgs/icon.png">
+    <link rel="shortcut icon" href="icon.png" type="icon.png">
     <link rel="stylesheet" href="Css/normalize.css">
     <link rel="stylesheet" href="Css/master.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" >
 </head>
 <body>
@@ -116,7 +116,7 @@
         <p> We are creative agency in many fields of technology and modern releases, do not miss the opportunity to join us.</p>
 </div>
 <div class="image-box">
-    <img src="imgs/about-us.png" alt="">
+    <img src="about-us.png" alt="">
 </div>
 </div>
 </div>
@@ -173,16 +173,16 @@
     <div class="container">
         <h2>Our Gallery</h2>
         <div class="images-box">
-            <img src="imgs/img1.jpg" alt="Image One">
-            <img src="imgs/img2.jpg" alt="Image Two">
-            <img src="imgs/img3.jpg" alt="Image Tree">
-            <img src="imgs/img4.jpg" alt="Image Four">
-            <img src="imgs/img5.jpg" alt="Image Five">
-            <img src="imgs/img6.jpg" alt="">
-            <img src="imgs/img7.jpg" alt="">
-            <img src="imgs/img8.jpg" alt="">
-            <img src="imgs/img9.jpg" alt="">
-            <img src="imgs/img10.jpg" alt="">
+            <img src="img1.jpg" alt="Image One">
+            <img src="img2.jpg" alt="Image Two">
+            <img src="img3.jpg" alt="Image Tree">
+            <img src="img4.jpg" alt="Image Four">
+            <img src="img5.jpg" alt="Image Five">
+            <img src="img6.jpg" alt="">
+            <img src="img7.jpg" alt="">
+            <img src="img8.jpg" alt="">
+            <img src="img9.jpg" alt="">
+            <img src="img10.jpg" alt="">
         </div>
     </div>
 </div>
@@ -244,32 +244,32 @@
     <h2>Our Features</h2>
     <div class="container">
         <div class="feat-box">
-            <img src="imgs/icon1.png" alt="">
+            <img src="icon1.png" alt="">
             <h4>Development</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="feat-box">
-            <img src="imgs/icon2.png" alt="">
+            <img src="icon2.png" alt="">
             <h4>Marketing</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="feat-box">
-            <img src="imgs/icon3.png" alt="">
+            <img src="icon3.png" alt="">
             <h4>Hosting</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="feat-box">
-            <img src="imgs/icon4.png" alt="">
+            <img src="icon4.png" alt="">
             <h4>Database</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="feat-box">
-            <img src="imgs/icon5.png" alt="">
+            <img src="icon5.png" alt="">
             <h4>Cloud and Servers</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="feat-box">
-            <img src="imgs/icon6.png" alt="">
+            <img src="icon6.png" alt="">
             <h4>Bonding</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
@@ -340,6 +340,6 @@
 <div class="footer">Created By Hazem Mohamed © 2023</div>
 <!-- End Footer -->
 
-<script src="js/master.js"></script>
+<script src="master.js"></script>
 </body>
 </html>
